--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <div id="name" class="col-md-8 text-right pr-5">
 
-                    <h6>Front-End Web Developer</h6>
+                    <h6>Information Technology Specialist</h6>
                     <h1 class="display-2">Tomasz Jaguś</h1>
 
                 </div>
@@ -58,8 +58,7 @@
                 <div class="col-md-4">
                     <h6 class="text-right text-uppercase">Front-End Web Developer? Grafik?</h6>
                     <p class="text-justify">
-                        Jestem freelancerem z ponad 4. letnim doświadczeniem w komercyjnym tworzeniu witryn internetowych oraz grafik. Wytrwałość, pewność siebie, efektywność to cechy które mnie definiują. Tworzę nie tylko dla innych ale przedewszystkim dla samego siebie.
-                    </p>
+                        Lipsum                    </p>
                     <p class="text-justify">
                         Jestem samoukiem. Cała moja wiedza wynika z lat tworzenia, próbowania, szukania rozwiązań. Lubię się stawiać przed wyzwaniami, którym z pozoru nie sprostam, gdyż tylko i wyłącznie w ten sposób mogę nauczyć się czegoś nowego.
                     </p>
