--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
                     <img src="img/face.jpg" class="rounded-circle" alt="Cartoon face of webowner">
                 </div>
                 <div class="col-md-4">
-                    <h6 class="text-right text-uppercase">Front-End Web Developer? Grafik?</h6>
+                    <h6 class="text-right text-uppercase">Specjalista d.s. IT? Ekspert? Entuzjasta? </h6>
                     <p class="text-justify">
-                        Lipsum                    </p>
+                        ...
+                    </p>
                     <p class="text-justify">
                         Jestem samoukiem. Cała moja wiedza wynika z lat tworzenia, próbowania, szukania rozwiązań. Lubię się stawiać przed wyzwaniami, którym z pozoru nie sprostam, gdyż tylko i wyłącznie w ten sposób mogę nauczyć się czegoś nowego.
                     </p>
